// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) display-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.03)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.03)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.03)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.03)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) input-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#F5A623",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#F5A623",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#F5A623",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#F5A623",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#a1a1a1",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#a1a1a1",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#F5A623",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#F5A623",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#F5A623",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#F5A623",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#a1a1a1",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) outline-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "transparent",
          "borderColor": "#a1a1a1",
          "borderRadius": 999,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-m-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-m-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 8,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 12,
          "paddingVertical": 4,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "600",
          "lineHeight": 16,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-s-disabled-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix baseline (variant x size x {default,disabled} x modes) selectable-s-disabled-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.01)",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#646466",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;

exports[`Chip — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) selectable-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Tag"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": true,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderWidth": 0,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-chip"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "600",
          "lineHeight": 14,
        }
      }
    >
      Tag
    </Text>
  </View>
</View>
`;
